# GemorProject

./: .env  .env.example  .gitignore  README.md  data  docker-compose-debug.yml  docker-compose-minimal.yml  docker-compose-no-ssl.yml  docker-compose.yml  nginx.cofig  Список изменений.md
DataModele/QuizSystemCore/: .gitignore  CMakeLists.txt  README.md  check-build.ps1  docker-compose.dev.yml  docker-compose.yml  launch-dev.bat  project_structure.txt  quiz-system.code-workspace  run.ps1  setup-db-simple.bat  simple_test.cpp  test-all-methods.ps1  test-server.ps1  test_server.cpp
DataModele/QuizSystemCore/config/: development.json
DataModele/QuizSystemCore/database/: schema.sql
DataModele/QuizSystemCore/database/scripts/: init-database.bat  init-database.ps1  init_database.bat
DataModele/QuizSystemCore/docker/: Dockerfile.dev  Dockerfile.prod
DataModele/QuizSystemCore/docs/development/: README.md
DataModele/QuizSystemCore/include/Utils/: ConfigLoader.h  DateTime.h  Logger.h
DataModele/QuizSystemCore/include/api/: BaseController.h  UserController.h
DataModele/QuizSystemCore/include/core/: Application.h  HttpServer.h
DataModele/QuizSystemCore/include/database/: DatabaseManager.h
DataModele/QuizSystemCore/include/models/: AnswerOption.h  Question.h  Test.h  User.h
DataModele/QuizSystemCore/include/repositories/: BaseRepository.h  UserRepository.h
DataModele/QuizSystemCore/include/services/: UserService.h
DataModele/QuizSystemCore/scripts/: dev-menu.ps1  quick-check.ps1  run-tests.ps1  test-powershell.ps1
DataModele/QuizSystemCore/src/: main.cpp
DataModele/QuizSystemCore/src/core/: Application.cpp  HttpServer.cpp
DataModele/QuizSystemCore/src/database/: DatabaseManager.cpp
DataModele/QuizSystemCore/src/models/: User.cpp
DataModele/QuizSystemCore/src/utils/: ConfigLoader.cpp  Logger.cpp
DataModele/QuizSystemCore/tests/: CMakeLists.txt  TestBase.h
DataModele/QuizSystemCore/tests/integration/: DatabaseTest.cpp
DataModele/QuizSystemCore/tests/unit/: ConfigLoaderTest.cpp  UserTest.cpp
DataModele/group_project/: Dockerfile  simple-check.ps1
DataModele/group_project/internal/models/: course.go  notification.go  question.go
DataModele/group_project/pkg/database/: database.go
DataModele/group_project/scripts/: clean_db.sql
TelegramBotModule/: Сценарии.md
TgBot_module/: go.sum
WebModule/: .env.example  README.md  docker-compose.yml  package-lock.json  package.json  server.js  Список изменений.md  Сценарии.md
WebModule.ru/: README.md  check-system.js  create-admin.js  create-new-admin.js  docker-compose.yml  fix-admin.bat  fix-admin.js  package-lock.json  package.json  quick-fix.bat  server-old.js  server.js  start-system.sh  test-login.js
WebModule.ru/nginx-1.29.4/conf/sites-avalible/: WebMoodule.ru.conf
WebModule.ru/public/: Registration.html  Test.html  login.html  take-test.html
WebModule.ru/public/js/: auth.js  testCreator.js  test_main.js
WebModule/General/: GENstyle.css  General.html  auth.js  index.html  sessionStore.js
WebModule/Register/: RegScript.js  RegStyle.css  Registration.html
WebModule/Test/: Test.html  TestStyle.css
WebModule/database/: connection.js
WebModule/database/migrations/: 001_initial.sql
WebModule/nging/: nginx.config
WebModule/public/: Registration.html  Test.html  create-test.html  index.html  login.html  my-tests.html  take-test.html  test-system.html
WebModule/public/css/: GENstyle.css
WebModule/public/js/: RegScript.js  auth.js  testCreator.js  test_main.js
WebModule/redis/: redis-server.js
api/: .env  dockerfile  index.php  package.json
api/src/: app.js
api/src/controllers/: authController.js  sessionController.js
api/src/models/: User.js
api/src/sql/: schema.sql
client/: Registration.html  Test.html  create-test.html  index.html  login.html  my-tests.html  take-test.html
client/css/: GENstyle.css  RegStyle.css
client/js/: RegScript.js  auth.js  sessionStore.js  testCreator.js  test_main.js
nginx/: weball.conf.template
nginx-1.29.4/conf/: nginx.conf
server/: .env  package.json
server/src/: app.js
server/src/controllers/: authController.js  sessionController.js
server/src/sql/: schema.sql
sql_module/: go.mod
sql_module/cmd/test-db/: main.go
sql_module/internal/models/: user.go
sql_module/internal/repository/: attempt_repository.go  notification_repository.go
sql_module/internal/server/: server.go
src/auth_module/: .dockerignore  Dockerfile  app.py  requirements.txt
src/auth_module/config/: database.yml
src/auth_module/static/: style_auth.css
src/auth_module/templates/: Account.html  Create_user.html  Log_in.html  auth.html  auth_error.html  auth_success.html  login.html
src/sql_module/: main.go  test_all_endpoints.sh
src/sql_module/cmd/test-db/: main.go
src/sql_module/internal/auth/: block_middleware.go  jwt_middleware.go
src/sql_module/internal/config/: config.go
src/sql_module/internal/models/: attempt.go  test.go
src/sql_module/internal/repository/: course_repository.go  question_repository.go  test_repository.go  user_repository.go
src/sql_module/scripts/: init.sql
src/tg_bot_module/: .env  Dockerfile  go.mod  main.go
src/web_module/: CMakeLists.txt  Dockerfile  conanfile.txt  redis_client.hpp  wait-for-redis.sh  webserver.cpp
src/web_module/static/: style_index.css
src/web_module/templates/: auth_template.html  index.html
workflows/: test.yml
